--- a/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,33 +1,33 @@
 .title {
-  border: 1px solid #e7e7ed;
-  border-radius: 8px;
-  padding: 8px;
+  border: 0.063rem solid #e7e7ed;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
   text-align: center;
 }
 .personal-data {
-  border: 1px solid #e7e7ed;
-  border-radius: 8px;
-  margin-bottom: 30px;
-  padding: 20px;
+  border: 0.063rem solid #e7e7ed;
+  border-radius: 0.5rem;
+  margin-bottom: 1.9rem;
+  padding: 1.25rem;
 }
 .billing-data {
-  border: 1px solid #e7e7ed;
-  border-radius: 8px;
-  margin-top: 30px;
-  padding: 20px;
+  border: 0.063rem solid #e7e7ed;
+  border-radius: 0.5rem;
+  margin-top: 1.9rem;
+  padding: 1.25rem;
 }
 .male {
-  width: 200px;
+  width: 12rem;
 }
 .female {
-  margin-left: -80px;
-  width: 200px;
+  margin-left: -5rem;
+  width: 12rem;
 }
 .btn.btn-link {
   background-color: #f8f8ff;
-  border-radius: 16px;
+  border-radius: 1rem;
   font-weight: bold;
 }
 .buttons {
-  padding-left: 25px;
+  padding-left: 1.5rem;
 }
