--- a/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,33 +1,69 @@
 .title {
   border: 0.063rem solid #e7e7ed;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   padding: 0.5rem;
   text-align: center;
 }
+
 .personal-data {
   border: 0.063rem solid #e7e7ed;
   border-radius: 0.5rem;
   margin-bottom: 1.9rem;
   padding: 1.25rem;
 }
+
 .billing-data {
   border: 0.063rem solid #e7e7ed;
   border-radius: 0.5rem;
   margin-top: 1.9rem;
   padding: 1.25rem;
 }
+
+.gender {
+  left: -6.875rem;
+  position: relative;
+}
+
 .male {
+  left: -6.875rem;
+  position: relative;
+  top: 0.625rem;
   width: 12rem;
 }
+
 .female {
+  left: -6.875rem;
   margin-left: -5rem;
+  position: relative;
+  top: 0.625rem;
   width: 12rem;
 }
+
+.birthday {
+  left: -6.875rem;
+  position: relative;
+  width: 37.188rem;
+}
+
+#password-viewer {
+  position: relative;
+  width: 120%;
+}
+
+#password-viewer img {
+  cursor: pointer;
+  left: -2.813rem;
+  width: 1.25rem;
+  position: absolute;
+  top: 2.25rem;
+}
+
 .btn.btn-link {
   background-color: #f8f8ff;
   border-radius: 1rem;
   font-weight: bold;
 }
+
 .buttons {
   padding-left: 1.5rem;
 }
