Fix logic from state input and visual of buttons

--- a/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
@@ -32,10 +32,16 @@
   width: 12rem;
 }
 
-.btn.btn-link {
-  background-color: #f8f8ff;
-  border-radius: 1rem;
-  font-weight: bold;
+.clickable #accept-tou {
+  margin-left: 0.75rem;
+}
+
+.clickable #read-tou {
+  margin-left: 0.813rem;
+}
+
+.clickable #reset-form {
+  margin-left: 56.063rem;
 }
 
 .buttons {
