--- a/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/amf-web/src/main/resources/META-INF/resources/css/main.scss
@@ -32,18 +32,15 @@
   width: 12rem;
 }
 
-.clickable #accept-tou {
+.security-infos #accept-tou {
   margin-left: 0.75rem;
 }
 
-.clickable #read-tou {
+.security-infos #read-tou {
   margin-left: 0.813rem;
+  margin-right: 56.063rem;
 }
 
-.clickable #reset-form {
-  margin-left: 56.063rem;
-}
-
-.buttons {
+.external-buttons {
   padding-left: 1.5rem;
 }
